--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -74,7 +74,7 @@ a:hover {
   line-height: 50px;
   font-size: 20px;
   text-align: center;
-  font-family: Montserrat;
+  // font-family: Montserrat;
   font-size: 16px;
   margin: 10px 15px 0px 5px;
   bottom: 0;
@@ -238,13 +238,32 @@ span.todo {
   // float: right;
 }
 
-#hover-content {
+#signUpContent {
     display:none;
 }
 
-#hover-me:hover #hover-content {
+#loginContent {
+    display:none;
+}
+
+#hover_sign:hover #signUpContent {
     display:block;
     position: absolute;
+    right: 10px;
+}
+
+#hover_login:hover #loginContent {
+    display:block;
+    position: absolute;
+    right: 10px;
+}
+
+#hover_sign {
+  float: right;
+}
+
+#hover_login {
+  float: right;
 }
 
 .loginDiv {
@@ -271,7 +290,7 @@ span.todo {
   z-index: 5;
   background-color: white;
   width: 300px;
-  padding: 5px;
+  padding: 10px;
   -webkit-box-shadow: 6px 7px 29px 2px rgba(0,0,0,0.75);
   -moz-box-shadow: 6px 7px 29px 2px rgba(0,0,0,0.75);
   box-shadow: 6px 7px 29px 2px rgba(0,0,0,0.75);
@@ -285,6 +304,9 @@ textarea[type=text] {
   margin-top: 8px;
   border-style: none;
   border-bottom: 1px solid #4A5A80;
+  height: 30px;
+  line-height: 35px;
+  font-size: 15px;
 }
 
 .addTaskBtn {
@@ -322,33 +344,6 @@ textarea[type=text] {
 #createBtn {
   margin-top: 8px;
 }
-
-// div.dropdown-menu {
-//   position: fixed;
-//   z-index: 2; /* Make sure its above other items. */
-//   border: 2px solid #555555;
-//   background-color: #ccc;
-//   border-radius: 5px;
-//   text-align: center;
-//   line-height: 30px;
-//   width: 400px; /* Set your desired with */
-//   top: 25%;
-
-//   input {
-//     border: 0px;
-//     text-align: center;
-//     width: 90%;
-//     margin: 10px;
-//   }
-
-//   textarea {
-//     border: 0px;
-//     text-align: center;
-//     wrap: hard;
-//     width: 90%;
-//     margin-top: 10px;
-//   }
-// }
 
 .newtask-form {
   position: fixed;
