--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -202,8 +202,9 @@ span.todo {
   -moz-box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75);
   box-shadow: 6px 7px 29px 2px rgba(0, 0, 0, 0.75); }
 
-input[type=text],
-textarea[type=text] {
+input[type=text]
+,
+input[type=password] {
   width: 100%;
   float: left;
   margin-top: 8px;
@@ -213,13 +214,24 @@ textarea[type=text] {
   line-height: 35px;
   font-size: 15px; }
 
-.addTaskBtn {
-  float: right;
+textarea[type=text] {
+  width: 100%;
+  float: left;
+  margin-top: 8px;
+  border-style: none;
+  border-bottom: 1px solid #4A5A80;
+  line-height: 35px;
   font-size: 15px; }
 
 .canTaskBtn {
   float: left;
-  font-size: 15px; }
+  font-size: 15px;
+  margin-top: 6px; }
+
+.addTaskBtn {
+  float: right;
+  font-size: 15px;
+  margin-top: 6px; }
 
 .btn-primary {
   display: none; }
@@ -242,6 +254,20 @@ textarea[type=text] {
   width: 400px;
   /* Set your desired with */
   top: 15%; }
+
+.login-btn {
+  background: #4A5A80;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  margin-top: 15px; }
+
+.login-btn2 {
+  background: #4A5A80;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  margin-top: 200px; }
 
 .addtask {
   float: left;
