--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -297,8 +297,10 @@ span.todo {
 
 }
 
-input[type=text],
-textarea[type=text] {
+input[type=text]
+,
+input[type=password]
+{
   width: 100%;
   float: left;
   margin-top: 8px;
@@ -309,14 +311,25 @@ textarea[type=text] {
   font-size: 15px;
 }
 
-.addTaskBtn {
-  float: right;
+textarea[type=text] {
+  width: 100%;
+  float: left;
+  margin-top: 8px;
+  border-style: none;
+  border-bottom: 1px solid #4A5A80;
+  line-height: 35px;
   font-size: 15px;
 }
 
 .canTaskBtn {
   float: left;
   font-size: 15px;
+  margin-top: 6px;
+}
+.addTaskBtn {
+  float: right;
+  font-size: 15px;
+  margin-top: 6px;
 }
 
 .groupForm {
@@ -358,8 +371,20 @@ textarea[type=text] {
   top: 15%;
 }
 
-.btn {
-  // background: rgba(0, 0, 0, 0);
+.login-btn {
+  background: #4A5A80;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  margin-top: 15px;
+}
+
+.login-btn2 {
+  background: #4A5A80;
+  width: 100%;
+  height: 40px;
+  line-height: 40px;
+  margin-top: 200px;
 }
 
 .addtask {
